log
Tue 19 Mar 2024 11:50:23 PM UTC: 
 tests:  0|5
total_score: 0/70
2470171
Tue 19 Mar 2024 11:58:25 PM UTC: 
 exercises.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:48:18: error: invalid use of incomplete typedef ‘List’
   48 |         *((int*)L->data[L->size - 1]) = i;
      |                  ^~
exercises.c:48:26: error: invalid use of incomplete typedef ‘List’
   48 |         *((int*)L->data[L->size - 1]) = i;
      |                          ^~
Compilation failed
dd67432
Wed 20 Mar 2024 12:02:57 AM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  1|4
total_score: 10/70
5ceef10
Wed 20 Mar 2024 12:05:55 AM UTC: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
f0f691b
Wed 20 Mar 2024 12:07:13 AM UTC: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
76ea6a5
Wed 20 Mar 2024 12:13:12 AM UTC: 
 exercises.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:48:16: error: assignment to ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   48 |         numero = i;
      |                ^
exercises.c: In function ‘copia_pila’:
exercises.c:96:12: error: unused variable ‘pila’ [-Werror=unused-variable]
   96 |     Stack* pila = create_stack();
      |            ^~~~
cc1: all warnings being treated as errors
Compilation failed
ebb2d8a
Wed 20 Mar 2024 12:13:23 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:48:16: error: assignment to ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   48 |         numero = i;
      |                ^
cc1: all warnings being treated as errors
Compilation failed
3452da5
Wed 20 Mar 2024 12:13:34 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 30/70
93415a9
Wed 20 Mar 2024 12:13:57 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 30/70
efcffb8
Wed 20 Mar 2024 12:14:14 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
40536db
Thu 21 Mar 2024 05:45:58 PM UTC: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
7d9283a
Thu 21 Mar 2024 05:51:36 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:96:22: error: implicit declaration of function ‘createStack’; did you mean ‘create_stack’? [-Werror=implicit-function-declaration]
   96 |     Stack* pilaAux = createStack();
      |                      ^~~~~~~~~~~
      |                      create_stack
exercises.c:96:22: error: initialization of ‘Stack *’ {aka ‘List *’} from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
cc1: all warnings being treated as errors
Compilation failed
36aba75
Thu 21 Mar 2024 05:52:04 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
dd5f4a6
Thu 21 Mar 2024 05:56:50 PM UTC: 
 exercises.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:126:33: error: suggest parentheses around ‘&&’ within ‘||’ [-Werror=parentheses]
  126 |             if(cadena[i] == ')' && *(char*)top(pila) == '(' ||
      |                ~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~
exercises.c:128:34: error: suggest parentheses around ‘&&’ within ‘||’ [-Werror=parentheses]
  128 |                 cadena[i] == '}' && *(char*)top(pila) == '{')){
      |                 ~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~
exercises.c:128:62: error: expected statement before ‘)’ token
  128 |                 cadena[i] == '}' && *(char*)top(pila) == '{')){
      |                                                              ^
exercises.c:126:13: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
  126 |             if(cadena[i] == ')' && *(char*)top(pila) == '(' ||
      |             ^~
exercises.c:128:63: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
  128 |                 cadena[i] == '}' && *(char*)top(pila) == '{')){
      |                                                               ^
exercises.c:131:13: error: ‘else’ without a previous ‘if’
  131 |             else
      |             ^~~~
cc1: all warnings being treated as errors
Compilation failed
1970ad7
